# ewxpwsdb

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Procfile  README.md  example-dot-env  pyproject.toml  requirements.txt
.ebextensions/: 01_fastapi.config
data/: example_test_stations_tsv_file.txt
doc/: Adding a new variable process.md  contrib.md  design.md  dev.md  ewx_pws_api_variables.md  example_dot_env.txt  example_using_api.ipynb  example_using_collector.ipynb  example_using_db.ipynb  example_using_station_readings.ipynb  starting_the_api_server_with_docker.md  steps_to_add_a_station.md  weather_variables.md
doc/external_apis/: campbell.md  davis.md  davis_example_data.json  locomos2024_example_data.json  onset.md  onset_example_data.json  onset_licor_example_data.json  rainwise.md  rainwise_example_data.json  rainwise_example_data_metric.json  spectrum.md  spectrum_example_data.json  zentra.md  zentra_example_data.json
scripts/: catchup.sh
src/ewxpwsdb/: __init__.py  collector.py  ewxpwsdb.py  logging_config.py  station.py  station_readings.py  time_intervals.py
src/ewxpwsdb/api/: cli.py  ewxpws_ssl.py  http_api.py
src/ewxpwsdb/db/: database.py  importdata.py  models.py  summary_models.py
tests/: conftest.py  test_api_readings.py  test_collector.py  test_database_checks.py  test_date_interval.py  test_get_historical_data.py  test_hourly_weather_summary.py  test_sqlmodel_db.py  test_station_class.py  test_station_readings_class.py  test_temp_pg.py  test_time_intervals.py  test_weather_api_basics.py  test_weather_summaries.py  test_zentra_specifics.py
(+13 files in other folders)
